Replicating Granularity updates from the Tally endpoint to the Capacity endpoint
